Fix footer link alignment

--- a/src/components/SectionFooter/index.module.scss
+++ b/src/components/SectionFooter/index.module.scss
@@ -39,4 +39,7 @@
 .top {
   text-decoration: none;
   color: var(--color-text);
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
 }
